crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__body_args_projection.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
assertion_line: 336
expression: format
---
Format {
    elements: [
        Token(
            [
                Identifier(
                    "fn",
                ),
            ],
        ),
        Field(
            "function",
            Function(
                Name,
            ),
        ),
        Token(
            [
                LParen,
            ],
        ),
        Field(
            "body",
            Body(
                Args,
            ),
        ),
        Token(
            [
                RParen,
            ],
        ),
    ],
}
