crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__body_body_projection.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
assertion_line: 320
expression: format
---
Format {
    elements: [
        Token(
            [
                EscapedLBrace,
            ],
        ),
        Field(
            "body",
            Body(
                Body,
            ),
        ),
        Token(
            [
                EscapedRBrace,
            ],
        ),
    ],
}
