crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__body_captures_projection.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
expression: format
---
Format {
    elements: [
        Token(
            [
                Identifier(
                    "fn",
                ),
            ],
        ),
        Context(
            Name,
        ),
        Token(
            [
                LParen,
            ],
        ),
        Field(
            "sig",
            Signature(
                Inputs,
            ),
        ),
        Token(
            [
                RParen,
                Arrow,
            ],
        ),
        Field(
            "sig",
            Signature(
                Return,
            ),
        ),
        Token(
            [
                LParen,
            ],
        ),
        Field(
            "body",
            Body(
                Ports,
            ),
        ),
        Token(
            [
                RParen,
                Identifier(
                    "captures",
                ),
                LParen,
            ],
        ),
        Field(
            "body",
            Body(
                Captures,
            ),
        ),
        Token(
            [
                RParen,
            ],
        ),
        Token(
            [
                EscapedLBrace,
            ],
        ),
        Field(
            "body",
            Body(
                Body,
            ),
        ),
        Token(
            [
                EscapedRBrace,
            ],
        ),
    ],
}
