crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__body_ports_projection.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
assertion_line: 312
expression: format
---
Format {
    elements: [
        Field(
            "body",
            Body(
                Ports,
            ),
        ),
    ],
}
