crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__body_without_projection_is_default.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
assertion_line: 345
expression: format
---
Format {
    elements: [
        Field(
            "body",
            Default,
        ),
    ],
}
