crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__context_name_projection.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
expression: format
---
Format {
    elements: [
        Token(
            [
                Identifier(
                    "fn",
                ),
            ],
        ),
        Context(
            Name,
        ),
        Token(
            [
                LParen,
            ],
        ),
        Field(
            "body",
            Body(
                Ports,
            ),
        ),
        Token(
            [
                RParen,
                Arrow,
            ],
        ),
        Context(
            Return,
        ),
    ],
}
