crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__dollar_keyword.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
expression: format
---
Format {
    elements: [
        Keyword(
            "h",
        ),
        Field(
            "qubit",
            Default,
        ),
    ],
}
