crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__dollar_keyword_cnot.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
expression: format
---
Format {
    elements: [
        Keyword(
            "cnot",
        ),
        Field(
            "ctrl",
            Default,
        ),
        Token(
            [
                Comma,
            ],
        ),
        Field(
            "tgt",
            Default,
        ),
        Token(
            [
                Arrow,
            ],
        ),
        Field(
            "ctrl_out",
            Type,
        ),
        Token(
            [
                Comma,
            ],
        ),
        Field(
            "tgt_out",
            Type,
        ),
    ],
}
