crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__dollar_keyword_with_underscore.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
expression: format
---
Format {
    elements: [
        Keyword(
            "z_spider",
        ),
        Token(
            [
                LParen,
            ],
        ),
        Field(
            "angle",
            Default,
        ),
        Token(
            [
                RParen,
            ],
        ),
        Field(
            "legs",
            Default,
        ),
    ],
}
