crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__format_parser_complex.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
expression: format
---
Format {
    elements: [
        Token(
            [
                Identifier(
                    "load",
                ),
                Identifier(
                    "something",
                ),
            ],
        ),
        Field(
            "value",
            Name,
        ),
        Token(
            [
                Identifier(
                    "from",
                ),
            ],
        ),
        Field(
            "address",
            Default,
        ),
        Token(
            [
                Colon,
            ],
        ),
        Field(
            "value",
            Type,
        ),
        Token(
            [
                Arrow,
            ],
        ),
        Field(
            "result",
            Type,
        ),
    ],
}
