crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__format_parser_escaped_lbrace.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
expression: format
---
Format {
    elements: [
        Token(
            [
                Identifier(
                    "dict",
                ),
            ],
        ),
        Token(
            [
                EscapedLBrace,
            ],
        ),
        Field(
            "key",
            Default,
        ),
        Token(
            [
                EscapedRBrace,
            ],
        ),
        Token(
            [
                Equal,
            ],
        ),
        Field(
            "value",
            Default,
        ),
    ],
}
